<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- LINEAR LAYOUT CONTENIDO DENTRO DEL CONSTRAINTLAYOUT Y QUE SERÁ LA REFERENCIA A LOS ELEMENTOS-->
    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="888dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent" <!-- Linear contenido dentro del layout para amoldar las tablerow -->
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/titleMovie1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weight = "1"
            android:textSize="20dp"
            android:textColor="@color/purple_200"
            android:layout_marginLeft="100dp"
            android:text="@string/aliens" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/alien"
                    android:layout_width="255dp"
                    android:layout_height="219dp"
                    android:layout_marginTop="50dp"
                    app:srcCompat="@drawable/alien" />

                <Button
                    android:id="@+id/boton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:background="@color/purple_200"
                    android:text="@string/choice" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/titleMovie2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:textSize="20dp"
                    android:textColor="@color/purple_200"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/odissey" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="301dp">

                <ImageView
                    android:id="@+id/odissey"
                    android:layout_width="wrap_content"
                    android:layout_height="279dp"
                    app:srcCompat="@drawable/dos" />
                <Button
                    android:id="@+id/boton2"
                    android:background="@color/purple_200"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/choice" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/things"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/purple_200"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="160dp"
                    android:textSize="20dp"
                    android:text="@string/thing" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/thing" />
                <Button
                    android:id="@+id/boton3"
                    android:layout_width="wrap_content"
                    android:background="@color/purple_200"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/choice" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>